// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with collapsed prop 1`] = `
<div
  className="sc-gipzik fMEzEz"
/>
`;

exports[`renders correctly with no props 1`] = `
<div
  className="sc-gipzik kKDUEU"
/>
`;
